syntax = "proto3";

package AuthenticationServer.gRPC;

// The AuthService definition.
service AuthService {
    rpc ValidateJwtToken (JwtTokenRequest) returns (JwtTokenResponse);
}

// The request message containing the JWT token.
message JwtTokenRequest {
    string token = 1;
}

// The response message containing the validation result.
message JwtTokenResponse {
    bool isValid = 1;
}